--- a/0x03-ES6_data_manipulation/.eslintrc.json
+++ b/0x03-ES6_data_manipulation/.eslintrc.json
@@ -12,6 +12,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "linebreak-style": ["error", "unix"]
+        "linebreak-style": ["error", "unix"],
+        "generator-star-spacing": ["error", {"before": false, "after": true}]
     }
 }
